# codex-session-export

./: .gitignore  README.md  pyproject.toml
codex_session_export/: __init__.py  cli.py  gui.py  models.py  parser.py  redact.py  render.py  utils.py
exports/数据采集/: index.html
exports/数据采集/019e69c8-3ab6-74b3-a363-a10e93914b5a/: report.html  report.md
exports/数据采集/019e69c8-3ab6-74b3-a363-a10e93914b5a/raw/: manifest.json
exports/数据采集/019e6aad-18c3-76f1-bbb0-364554ef4b2f/: report.html  report.md
exports/数据采集/019e6aad-18c3-76f1-bbb0-364554ef4b2f/raw/: manifest.json  session.redacted.jsonl
tests/: test_parser.py
