[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-export"
version = "0.1.0"
description = "Export Codex JSONL sessions into readable, verifiable HTML reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "codex-session-export contributors" }]
dependencies = []

[project.scripts]
codex-session-export = "codex_session_export.cli:main"

[tool.setuptools.packages.find]
include = ["codex_session_export*"]

